# 2024-2_ROKEYBOOTCAMP_intelligence_AI_project_2

./: .gitignore  ControllCMD_VELNode.py  DEVELOPMENT_PROCESS_schedule.ods  FindRCImgNode.py  README.md  욜로8_테스트결과.ods
rosws/interface/ai2_interface/: CMakeLists.txt  package.xml
rosws/src/Military_Ai/: package.xml  setup.cfg  setup.py
rosws/src/military_ai/: package.xml  setup.cfg  setup.py
rosws/src/military_ai/launch/: test1.launch.py  test2.launch.py
rosws/src/military_ai/military_ai/AMR_sprint/: ControllCMD_VELNode.py  FindRCImgNode.py  FindRCImgNode_2.py  StopAMRNode.py  nav.py  tur_cmd_vel.py  tur_cmd_vel_re.py
rosws/src/military_ai/military_ai/User_UI/: CentralPCControllerServerClass.py  PubReadyReturnAMRNode.py  PubReadyStopAMRNode.py  SrvReadyObjectionSeletionAMRNode.py  SrvReadyRequestSolveAMRNode.py
rosws/src/military_ai/military_ai/detect_sprint/: CentralAMRControllerServerClass.py  ObjectionAgainSeletionAMRNode.py  ObjectionSeletionAMRNode.py  PubFindObjAMRNode.py  PubFindObjAMRNode_2.py  PubReturnAMRNode.py  PubSendObjNode.py  PubTrackingPosNode.py  RequestSolveNode.py  ReturnAMRNode.py  SrvObjectionSeletionAMRNode.py  SrvRequestSolveAMRNode.py  StopAMRNode.py  SubReturnAMRNode.py  SubStopAMRNode.py  detect_car.py  front_car_tracking.py  sort.py  test.py  test_node_service_server.py  test_node_thread.py  tur_detect_car.py  tur_detect_car1.py
rosws/src/military_ai/test/: FindRCImgNode_2_test.py
rosws/src/military_interface/: CMakeLists.txt  package.xml
rosws/src/miltary_interface/: CMakeLists.txt  package.xml
(+9 files in other folders)
