<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>military_ai</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="128200788+malenwater@users.noreply.github.com">sunwolee</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>military_interface</depend>
  <depend>cv_bridge</depend>  <!-- OpenCV to ROS 2 bridge -->
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scikit-image</exec_depend>
  <exec_depend>python3-filterpy</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>  <!-- YOLO -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
